# sign_mnist_classification

./: Makefile  README.md  collection.py  config.py  db_model.py  model.py  model_service.py  preparation.py  pyproject.toml  runner.py  sign_language_mnist_classification.ipynb
.github/workflows/: workflow.yml
models/: cnn_model.pth  cnn_model_state_dict.pth
src/: runner.py  runner_builder.py  runner_inference.py
src/config/: __init__.py  config.py  db.py  logger.py  model.py
src/db/: db_model.py
src/model/: model_builder.py  model_inference.py  model_service.py
src/model/models/: cnn_model_state_dict.pth  cnn_model_state_dictv2.pth
src/model/pipeline/: collection.py  model.py  preparation.py
